--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,10 +6,15 @@
     </head>
     <body>
 
-        <h1>Tervetuloa!</h1>
+        <div sec:authorize="!isAuthenticated()">
+            <h1>Tervetuloa!</h1>
+        </div>
 
         <div sec:authorize="isAuthenticated()">
-            <h2>Olet kirjautunut!</h2>
+            <h1>Tervetuloa  <span sec:authentication="name">Username</span>!</h1>
+            <form th:action="@{/logout}" method="POST">
+                <input type="submit" value="Kirjaudu ulos"></input>
+            </form>
         </div>
 
         <p>
@@ -17,7 +22,11 @@
         </p>
 
         <p>
-            <a th:href="@{/accounts}">Rekisteröidy</a></li>
+            <a th:href="@{/register}">Rekisteröidy</a></li>
+        </p>
+
+        <p>
+            <a th:href="@{/accounts}">Henkilölista</a></li>
         </p>
 
 
