--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -29,6 +29,10 @@
             <a th:href="@{/accounts}">Henkilölista</a></li>
         </p>
 
+        <p>
+            <a th:href="@{/messages}">Chatti</a></li>
+        </p>
+
 
     </body>
 </html>
