--- a/src/main/resources/templates/accounts.html
+++ b/src/main/resources/templates/accounts.html
@@ -13,6 +13,9 @@
                 <a th:href="@{/accounts/{id}(id=${account.id})}">
                     <span th:text="${account.name}">name</span>
                 </a>
+                <form method="POST" th:action="@{/accounts/{id}(id=${account.id})}">
+                    <input type="submit" value="Lisää!"/>
+                </form>
             </li>
         </ul>
 
