--- a/src/main/resources/templates/accounts.html
+++ b/src/main/resources/templates/accounts.html
@@ -17,6 +17,10 @@
         </ul>
 
         <p>
+            <a th:href="@{/messages}">Chatti</a>
+        </p>
+
+        <p>
             <a th:href="@{/}">Oma sivu</a>
         </p>
 
