--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -37,6 +37,9 @@
             <input type="submit" value="Lisää viesti!"></input>
         </form>
 
+        <p>
+            <a th:href="@{/accounts}">Henkilölista</a>
+        </p>
 
         <p>
             <a th:href="@{/}">Oma sivu</a>
